# exam06

./: CMakeLists.txt  mini_serv.c  mini_serv2.c  mini_serv3.c
Backup/: mini_serv.c  mini_serv2.c  mini_serv3.c  mini_serv5.c
MyCode/: mini_serv.c
